Desktop view ShopCart

--- a/pages/accessories.html
+++ b/pages/accessories.html
@@ -59,7 +59,7 @@
                     <a class="heartIcon" href="#">
                         <i class="fa-regular fa-heart heartIcon"></i>
                     </a>
-                    <a href="#">
+                    <a href="./shopCart.html">
                         <i class="fa-regular fa-cart-shopping"></i>
                     </a>
                 </div>
