--- a/pages/hoodies.html
+++ b/pages/hoodies.html
@@ -58,7 +58,7 @@
                     <a class="heartIcon" href="#">
                         <i class="fa-regular fa-heart heartIcon"></i>
                     </a>
-                    <a href="#">
+                    <a href="./shopCart.html">
                         <i class="fa-regular fa-cart-shopping"></i>
                     </a>
                 </div>
@@ -96,7 +96,7 @@
             <div class="item__description">
                 <h4>PAST TENSE</h4>
                 <h5 class="soldOutItem">CH M G EG</h5>
-                <h4>€20</h4>
+                <h4>€25</h4>
             </div>
         </div>
         <div class="collection__item">
@@ -105,7 +105,7 @@
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
                 <h5>CH M G EG</h5>
-                <h4>€20</h4>
+                <h4>€25</h4>
             </div>
         </div>
         <div class="collection__item">
@@ -115,7 +115,7 @@
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
                 <h5 class="soldOutItem">CH M G EG</h5>
-                <h4>€20</h4>
+                <h4>€25</h4>
             </div>
         </div>
         <div class="collection__item">
@@ -124,7 +124,7 @@
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
                 <h5>CH M G EG</h5>
-                <h4>€20</h4>
+                <h4>€25</h4>
             </div>
         </div>
         <div class="collection__item">
@@ -134,7 +134,7 @@
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
                 <h5 class="soldOutItem">CH M G EG</h5>
-                <h4>€20</h4>
+                <h4>€25</h4>
             </div>
         </div>
         <div class="collection__item">
@@ -143,7 +143,7 @@
             <div class="item__description">
                 <h4>NOMBRE DEL PRODUCTO</h4>
                 <h5>CH M G EG</h5>
-                <h4>€20</h4>
+                <h4>€25</h4>
             </div>
         </div>
     </section>
