--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <a class="heartIcon" href="#">
                         <i class="fa-regular fa-heart heartIcon"></i>
                     </a>
-                    <a href="#">
+                    <a href="./pages/shopCart.html">
                         <i class="fa-regular fa-cart-shopping"></i>
                     </a>
                 </div>
@@ -164,8 +164,8 @@
             <h2>COLECCIONES</h2>
             <a href="#">Ver más</a>
         </div>
-
         <div class="line"></div>
+
         <div class="gridCollections container-fluid">
             <div class="row">
                 <div class="col-md-6 col-sm-12 gridItem">
