ShopingCart responsive 900px

--- a/pages/shopCart.html
+++ b/pages/shopCart.html
@@ -40,7 +40,7 @@
             ></a>
                 </div>
             </div>
-            <a href="./index.html">
+            <a href="../index.html">
                 <h1 class="header__logo">LUX</h1>
             </a>
 
@@ -132,16 +132,6 @@
               <h2>CUERO NEGRO / PLATA</h2>
               <p class="noStock">Agotado</p>
               <div class="options">
-                <!-- <form action="">
-                  <label for="size">Talla</label>
-                  <select name="size" id="size">
-                    <option value="CH">CH</option>
-                    <option value="M">M</option>
-                    <option value="G">G</option>
-                    <option value="EG">EG</option>
-                  </select>
-                </form> -->
-
                 <form action="">
                   <label for="amount">Cantidad</label>
                   <input type="number" id="amount" min="1" max="5" />
@@ -149,7 +139,7 @@
 
                 <button class="deleteItem" type="button">Eliminar</button>
               </div>
-              <a class="cartLink" href="./t-shirts.html"
+              <a class="cartLink" href="./accessories.html"
                 >Ver otros productos como este</a
               >
             </div>
@@ -184,7 +174,7 @@
 
                 <button class="deleteItem" type="button">Eliminar</button>
               </div>
-              <a class="cartLink" href="./t-shirts.html"
+              <a class="cartLink" href="./hoodies.html"
                 >Ver otros productos como este</a
               >
             </div>
