--- a/pages/t-shirts.html
+++ b/pages/t-shirts.html
@@ -119,9 +119,9 @@
         </div>
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img/2t-shirt.jpg" alt="Playera 4" />
+            <img src="../img2/4t-shirt.webp" alt="Playera 4" />
             <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
+                <h4>LADY THOR</h4>
                 <h5>CH M G EG</h5>
                 <h4>€15</h4>
             </div>
@@ -129,18 +129,18 @@
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
-            <img src="../img/3t-shirt.jpg" alt="Playera 5" />
+            <img src="../img2/5t-shirt.webp" alt="Playera 5" />
             <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
+                <h4>DARKSIDE</h4>
                 <h5 class="soldOutItem">CH M G EG</h5>
                 <h4>€15</h4>
             </div>
         </div>
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img/1t-shirt.jpg" alt="Playera 6" />
+            <img src="../img2/6t-shirt.jpg" alt="Playera 6" />
             <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
+                <h4>JAZMINE</h4>
                 <h5>CH M G EG</h5>
                 <h4>€15</h4>
             </div>
