--- a/pages/shopCart.html
+++ b/pages/shopCart.html
@@ -79,7 +79,7 @@
         </nav>
     </header>
 
-    <section class="flexTitle title">
+    <section class="flexTitle title cartTit">
         <div class="titleContainer">
             <h2>CARRITO DE COMPRAS</h2>
         </div>
