--- a/pages/shopCart.html
+++ b/pages/shopCart.html
@@ -241,5 +241,54 @@
         </div>
       </div>
     </section>
-  </body>
+    <!-- FOOTER -->
+    <footer class="footer">
+      <h1>LUX</h1>
+      <div class="footer__contact">
+        <h2>CONTACTO</h2>
+        <p>+34 624 677 628</p>
+        <p>LUXSTORE@LUX.COM</p>
+        <p>DE LUNES A VIERNES DE 8:00 A 21:00</p>
+      </div>
+      <div class="footer__flex">
+        <div class="footer__info">
+          <h2>INFORMACIÓN</h2>
+          <a href="#"> PREGUNTAS FRECUENTES </a>
+                        <a href="#"> AVISOS DE PRIVACIDAD </a>
+                        <a href="#"> TÉRMINOS Y CONDICIONES </a>
+                        <div class="icons">
+                            <a href="https://www.instagram.com/isra_quirozz/" target="_blank"><i class="fa-brands fa-instagram"></i
+            ></a>
+                            <a href="https://www.facebook.com/israel.quirozdezaldo/" target="_blank"><i class="fa-brands fa-square-facebook"></i
+            ></a>
+                        </div>
+                    </div>
+
+                    <div class="footer__info">
+                        <h2>COMPRAS</h2>
+                        <a href="#"> POLÍTICA DE CAMBIOS Y DEVOLUCIONES </a>
+                        <a href="#"> FORMA DE PAGOS </a>
+                        <a href="#"> CENTRO DE DEVOLUCIONES </a>
+                        <a href="#"> RASTREA TU PEDIDO </a>
+                    </div>
+                </div>
+
+                <div class="footer__bottom">
+                    <p>&copy; 2022, LUX</p>
+                </div>
+                </footer>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+                <script>
+                    const menu = document.querySelector(".menu");
+                    const navMenu = document.querySelector(".header__nav");
+                    const search = document.querySelector(".search");
+                    const body = document.querySelector("body");
+
+                    menu.addEventListener("click", () => {
+                        navMenu.classList.toggle("nav_visible");
+                        body.classList.toggle("allFixed");
+                    });
+                </script>
+</body>
+
 </html>
