ComingSoon responsive page

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                     </a>
                 </form>
                 <div class="icons">
-                    <a href="#">
+                    <a href="./pages/login.html">
                         <i class="fa-regular fa-user"></i>
                     </a>
-                    <a class="heartIcon" href="#">
+                    <a class="heartIcon" href="./pages/coomingSoon.html">
                         <i class="fa-regular fa-heart heartIcon"></i>
                     </a>
                     <a href="./pages/shopCart.html">
@@ -73,7 +73,7 @@
                 <li><a href="./pages/hoodies.html">SUDADERAS</a></li>
                 <li><a href="./pages/sneakers.html">ZAPATILLAS</a></li>
                 <li><a href="./pages/accessories.html">ACCESORIOS</a></li>
-                <li class="account"><a href="#">CUENTA</a></li>
+                <li class="account"><a href="./pages/login.html">CUENTA</a></li>
             </ul>
         </nav>
     </header>
@@ -138,7 +138,7 @@
     <section class="newProducts flexTitle">
         <div class="titleContainer">
             <h2>PRODUCTOS NUEVOS</h2>
-            <a href="#">Ver más</a>
+            <a href="./pages/accessories.html">Ver más</a>
         </div>
         <div class="line"></div>
         <div class="newProducts__content">
@@ -162,31 +162,27 @@
     <section class="collections flexTitle">
         <div class="titleContainer">
             <h2>COLECCIONES</h2>
-            <a href="#">Ver más</a>
+            <a href="./pages/t-shirts.html">Ver más</a>
         </div>
         <div class="line"></div>
 
         <div class="gridCollections container-fluid">
             <div class="row">
                 <div class="col-md-6 col-sm-12 gridItem">
-                    <h2>COLECCIÓN 1</h2>
                     <img src="./img/collection1.jpg" alt="Colección 1" />
                     <button class="collectionBtn">EXPLORAR</button>
                 </div>
                 <div class="col-md-6 col-sm-12 gridItem">
-                    <h2>COLECCIÓN 2</h2>
                     <img src="./img/collection2.jpg" alt="Colección 2" />
                     <button class="collectionBtn">EXPLORAR</button>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 col-sm-12 gridItem lastCollection">
-                    <h2>COLECCIÓN 3</h2>
                     <img src="./img/collection3.jpg" alt="Colección 3" />
                     <button class="collectionBtn">EXPLORAR</button>
                 </div>
                 <div class="col-md-6 col-sm-12 gridItem lastCollection">
-                    <h2>COLECCIÓN 4</h2>
                     <img src="./img/collection4.jpg" alt="Colección 4" />
                     <button class="collectionBtn">EXPLORAR</button>
                 </div>
@@ -217,7 +213,7 @@
     <section class="flexTitle">
         <div class="titleContainer">
             <h2>RESEÑAS</h2>
-            <a href="#">Ver más</a>
+            <a href="./pages/comingSoon.html">Ver más</a>
         </div>
         <div class="line"></div>
         <div id="carouselExampleSlidesOnly" class="carousel slide reviews" data-bs-ride="carousel">
@@ -283,7 +279,7 @@
             <div class="info">
                 <i class="fa-solid fa-ruler"></i>
                 <div class="infoContent">
-                    <h3><a href="#"> GUÍA DE TALLAS</a></h3>
+                    <h3><a href="./pages/comingSoon.html"> GUÍA DE TALLAS</a></h3>
                     <p>VER LA GUÍA DE TALLAS PARA HACER CORRECTAMENTE SU PEDIDO</p>
                 </div>
             </div>
@@ -319,9 +315,9 @@
         <div class="footer__flex">
             <div class="footer__info">
                 <h2>INFORMACIÓN</h2>
-                <a href=""> PREGUNTAS FRECUENTES </a>
-                <a href="#"> AVISOS DE PRIVACIDAD </a>
-                <a href="#"> TÉRMINOS Y CONDICIONES </a>
+                <a href="./pages/coomingSoon.html"> PREGUNTAS FRECUENTES </a>
+                <a href="./pages/coomingSoon.html"> AVISOS DE PRIVACIDAD </a>
+                <a href="./pages/coomingSoon.html"> TÉRMINOS Y CONDICIONES </a>
                 <div class="icons">
                     <a href="https://www.instagram.com/isra_quirozz/" target="_blank"><i class="fa-brands fa-instagram"></i
             ></a>
@@ -332,10 +328,12 @@
 
             <div class="footer__info">
                 <h2>COMPRAS</h2>
-                <a href="#"> POLÍTICA DE CAMBIOS Y DEVOLUCIONES </a>
-                <a href="#"> FORMA DE PAGOS </a>
-                <a href="#"> CENTRO DE DEVOLUCIONES </a>
-                <a href="#"> RASTREA TU PEDIDO </a>
+                <a href="./pages/coomingSoon.html">
+            POLÍTICA DE CAMBIOS Y DEVOLUCIONES
+          </a>
+                <a href="./pages/coomingSoon.html"> FORMA DE PAGOS </a>
+                <a href="./pages/coomingSoon.html"> CENTRO DE DEVOLUCIONES </a>
+                <a href="./pages/coomingSoon.html"> RASTREA TU PEDIDO </a>
             </div>
         </div>
 
