--- a/pages/hoodies.html
+++ b/pages/hoodies.html
@@ -52,10 +52,10 @@
                     </a>
                 </form>
                 <div class="icons">
-                    <a href="#">
+                    <a href="./login.html">
                         <i class="fa-regular fa-user"></i>
                     </a>
-                    <a class="heartIcon" href="#">
+                    <a class="heartIcon" href="./comingSoon.html">
                         <i class="fa-regular fa-heart heartIcon"></i>
                     </a>
                     <a href="./shopCart.html">
@@ -76,7 +76,7 @@
                 </li>
                 <li><a href="./sneakers.html">ZAPATILLAS</a></li>
                 <li><a href="./accessories.html">ACCESORIOS</a></li>
-                <li class="account"><a href="#">CUENTA</a></li>
+                <li class="account"><a href="./login.html">CUENTA</a></li>
             </ul>
         </nav>
     </header>
@@ -101,54 +101,56 @@
         </div>
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img/1hoodies.jpg" alt="Playera 1" />
+            <h2 class="soldOut">AGOTADO</h2>
+            <img src="../img2/5hoodies.webp" alt="Playera 4" />
             <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
-                <h5>CH M G EG</h5>
+                <h4>NARUTO</h4>
+                <h5 class="soldOutItem">CH M G EG</h5>
                 <h4>€25</h4>
             </div>
         </div>
+
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
-            <img src="../img/1hoodies.jpg" alt="Playera 2" />
+            <img src="../img2/3hoodies.webp" alt="Playera 2" />
             <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
+                <h4>BATMAN</h4>
                 <h5 class="soldOutItem">CH M G EG</h5>
                 <h4>€25</h4>
             </div>
         </div>
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img/1hoodies.jpg" alt="Playera 3" />
+            <img src="../img2/4hoodies.webp" alt="Playera 3" />
             <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
+                <h4>EREN JAEGER</h4>
                 <h5>CH M G EG</h5>
                 <h4>€25</h4>
             </div>
         </div>
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <h2 class="soldOut">AGOTADO</h2>
-            <img src="../img/1hoodies.jpg" alt="Playera 4" />
+            <img src="../img2/2hoodies.webp" alt="Playera 1" />
             <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
-                <h5 class="soldOutItem">CH M G EG</h5>
+                <h4>HARRY POTTER</h4>
+                <h5>CH M G EG</h5>
                 <h4>€25</h4>
             </div>
         </div>
+
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img/1hoodies.jpg" alt="Playera 5" />
+            <img src="../img2/6hoodies.webp" alt="Playera 5" />
             <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
+                <h4>JURASSIC PARK</h4>
                 <h5>CH M G EG</h5>
                 <h4>€25</h4>
             </div>
         </div>
     </section>
-    <!-- FOOTER -->
 
+    <!-- FOOTER -->
     <footer class="footer">
         <h1>LUX</h1>
         <div class="footer__contact">
@@ -160,9 +162,9 @@
         <div class="footer__flex">
             <div class="footer__info">
                 <h2>INFORMACIÓN</h2>
-                <a href=""> PREGUNTAS FRECUENTES </a>
-                <a href="#"> AVISOS DE PRIVACIDAD </a>
-                <a href="#"> TÉRMINOS Y CONDICIONES </a>
+                <a href="./comingSoon.html"> PREGUNTAS FRECUENTES </a>
+                <a href="./comingSoon.html"> AVISOS DE PRIVACIDAD </a>
+                <a href="./comingSoon.html"> TÉRMINOS Y CONDICIONES </a>
                 <div class="icons">
                     <a href="https://www.instagram.com/isra_quirozz/" target="_blank"><i class="fa-brands fa-instagram"></i
             ></a>
@@ -173,10 +175,10 @@
 
             <div class="footer__info">
                 <h2>COMPRAS</h2>
-                <a href="#"> POLÍTICA DE CAMBIOS Y DEVOLUCIONES </a>
-                <a href="#"> FORMA DE PAGOS </a>
-                <a href="#"> CENTRO DE DEVOLUCIONES </a>
-                <a href="#"> RASTREA TU PEDIDO </a>
+                <a href="./comingSoon.html"> POLÍTICA DE CAMBIOS Y DEVOLUCIONES </a>
+                <a href="./comingSoon.html"> FORMA DE PAGOS </a>
+                <a href="./comingSoon.html"> CENTRO DE DEVOLUCIONES </a>
+                <a href="./comingSoon.html"> RASTREA TU PEDIDO </a>
             </div>
         </div>
 
