--- a/pages/login.html
+++ b/pages/login.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- SEO -->
-    <meta name="description" content="Lux | Accesorios con una calidad suprema, lo más elegante para ti." />
+    <meta name="description" content="Lux | La mejor calidad para ti." />
     <meta name="keywords" content="Ropa, Playeras, Sudaderas, Tenis, Zapatillas, Accesorios, Moda" />
-    <title>LUX | ACCESORIOS</title>
+    <title>LUX | Cuenta</title>
     <!-- FAVICON -->
     <link rel="icon" href="../img/1icon.ico" />
     <!-- FONT -->
@@ -26,7 +26,6 @@
 </head>
 
 <body>
-    <!-- header -->
     <header class="header">
         <div class="header__top">
             <button class="menu">
@@ -35,9 +34,9 @@
             <div class="header__top--left">
                 <p>SÍGUENOS EN</p>
                 <div class="icons">
-                    <a href="https://www.instagram.com/isra_quirozz/"><i class="fa-brands fa-instagram"></i
+                    <a href="https://www.instagram.com/isra_quirozz/" target="_blank"><i class="fa-brands fa-instagram"></i
             ></a>
-                    <a href="https://www.facebook.com/israel.quirozdezaldo/"><i class="fa-brands fa-square-facebook"></i
+                    <a href="https://www.facebook.com/israel.quirozdezaldo/" target="_blank"><i class="fa-brands fa-square-facebook"></i
             ></a>
                 </div>
             </div>
@@ -46,15 +45,9 @@
             </a>
 
             <div class="header__top--right">
-                <form class="search" action="">
-                    <input type="text" placeholder="BUSCAR" />
-                    <a href="#">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                    </a>
-                </form>
                 <div class="icons">
-                    <a href="./login.html">
-                        <i class="fa-regular fa-user"></i>
+                    <a href="#">
+                        <span><i class="fa-regular fa-user"></i></span>
                     </a>
                     <a class="heartIcon" href="./comingSoon.html">
                         <i class="fa-regular fa-heart heartIcon"></i>
@@ -68,91 +61,33 @@
         <div class="divider"></div>
         <nav class="header__nav container">
             <ul>
-                <li><a href="../index.html">HOME</a></li>
                 <li>
-                    <a href="./t-shirts.html">PLAYERAS</a>
+                    <a href="../index.html">HOME</a>
                 </li>
-                <li>
-                    <a href="./hoodies.html">SUDADERAS</a>
-                </li>
+                <li><a href="./t-shirts.html">PLAYERAS</a></li>
+                <li><a href="./hoodies.html">SUDADERAS</a></li>
                 <li><a href="./sneakers.html">ZAPATILLAS</a></li>
-                <li>
-                    <a href="#"><span>ACCESORIOS</span></a>
+                <li><a href="./accessories.html">ACCESORIOS</a></li>
+                <li class="account">
+                    <a href="#"><span>CUENTA</span></a>
                 </li>
-                <li class="account"><a href="./login.html">CUENTA</a></li>
             </ul>
         </nav>
     </header>
 
-    <!-- PRODUCTS -->
-    <div class="title flexTitle">
-        <h2>ACCESORIOS</h2>
-        <div class="line"></div>
-        <button class="filterBtn">Filtrar</button>
+    <div class="loginSection">
+        <div class="login">
+            <h2>Ingresar</h2>
+            <form action="">
+                <input type="email" placeholder="Correo electrónico" />
+                <input type="password" placeholder="Contraseña" />
+                <button>INICIAR SESIÓN</button>
+            </form>
+            <a href="../index.html">Volver a la Tienda</a>
+            <a href="./comingSoon.html">Crear Cuenta</a>
+            <a href="./comingSoon.html">¿Olvidó su Contraseña?</a>
+        </div>
     </div>
-
-    <section class="collection">
-        <!-- <div class="collection__item difItem"> -->
-        <div class="collection__item difItem">
-            <i class="heartIcon fa-regular fa-heart"></i>
-            <h2 class="soldOut">AGOTADO</h2>
-            <img src="../img/pulsera1.jpg" alt="PULSERA 1" />
-            <div class="item__description">
-                <h4>CUERO NEGRO / PLATA</h4>
-                <h5 class="soldOutItem">PULSERA - HOMBRE</h5>
-                <h4>€60</h4>
-            </div>
-        </div>
-        <div class="collection__item difItem">
-            <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img/pulsera2.jpg" alt="PULSERA 2" />
-            <div class="item__description">
-                <h4>PULSERA DOBLE PLATA</h4>
-                <h5>PULSERA - HOMBRE</h5>
-                <h4>€60</h4>
-            </div>
-        </div>
-        <div class="collection__item difItem">
-            <i class="heartIcon fa-regular fa-heart"></i>
-            <h2 class="soldOut">AGOTADO</h2>
-            <img src="../img/puslera3.jpg" alt="PULSERA 3" />
-            <div class="item__description">
-                <h4>ACERO INOXIDABLE NEGRO</h4>
-                <h5 class="soldOutItem">PULSERA - UNISEX</h5>
-                <h4>€60</h4>
-            </div>
-        </div>
-        <div class="collection__item difItem">
-            <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img2/pulsera4.jpg" alt="PULSERA 4" />
-            <div class="item__description">
-                <h4>BRAZALETE TOUS</h4>
-                <h5>BRAZALETE - MUJER</h5>
-                <h4>€60</h4>
-            </div>
-        </div>
-        <div class="collection__item difItem">
-            <i class="heartIcon fa-regular fa-heart"></i>
-            <h2 class="soldOut">AGOTADO</h2>
-            <img src="../img2/pulsera5.jpg" alt="PULSERA 5" />
-            <div class="item__description">
-                <h4>PULSERA TOUS</h4>
-                <h5 class="soldOutItem">PULSERA - MUJER</h5>
-                <h4>€60</h4>
-            </div>
-        </div>
-        <div class="collection__item difItem">
-            <i class="heartIcon fa-regular fa-heart"></i>
-
-            <img src="../img2/pulsera6.jpg" alt="PULSERA 6" />
-            <div class="item__description">
-                <h4>PULSERA PERLAS / ORO</h4>
-                <h5>PULSERA - MUJER</h5>
-                <h4>€60</h4>
-            </div>
-        </div>
-    </section>
-
     <!-- FOOTER -->
     <footer class="footer">
         <h1>LUX</h1>
