--- a/pages/shopCart.html
+++ b/pages/shopCart.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- SEO -->
-    <meta name="description" content="Lux | Marca de ropa, exprésate a tu manera con diseños únicos. Entra y descubre tu propia escencia." />
+    <meta name="description" content="Lux | La mejor calidad para ti." />
     <meta name="keywords" content="Ropa, Playeras, Sudaderas, Tenis, Zapatillas, Accesorios, Moda" />
     <title>LUX | Tu Carrito</title>
     <!-- FAVICON -->
@@ -52,14 +52,14 @@
                     </a>
                 </form>
                 <div class="icons">
-                    <a href="#">
+                    <a href="./login.html">
                         <i class="fa-regular fa-user"></i>
                     </a>
-                    <a class="heartIcon" href="#">
+                    <a class="heartIcon" href="./comingSoon.html">
                         <i class="fa-regular fa-heart heartIcon"></i>
                     </a>
                     <a href="./pages/shopCart.html">
-                        <i class="fa-regular fa-cart-shopping"></i>
+                        <span><i class="fa-regular fa-cart-shopping"></i></span>
                     </a>
                 </div>
             </div>
@@ -74,7 +74,7 @@
                 <li><a href="./hoodies.html">SUDADERAS</a></li>
                 <li><a href="./sneakers.html">ZAPATILLAS</a></li>
                 <li><a href="./accessories.html">ACCESORIOS</a></li>
-                <li class="account"><a href="#">CUENTA</a></li>
+                <li class="account"><a href="./login.html">CUENTA</a></li>
             </ul>
         </nav>
     </header>
@@ -107,12 +107,6 @@
                     <option value="EG">EG</option>
                   </select>
                             </form>
-
-                            <form action="">
-                                <label for="amount">Cantidad</label>
-                                <input type="number" id="amount" min="1" max="5" />
-                            </form>
-
                             <button class="deleteItem" type="button">Eliminar</button>
                         </div>
                         <a class="cartLink" href="./t-shirts.html">Ver otros productos como este</a
@@ -132,11 +126,6 @@
               <h2>CUERO NEGRO / PLATA</h2>
               <p class="noStock">Agotado</p>
               <div class="options">
-                <form action="">
-                  <label for="amount">Cantidad</label>
-                  <input type="number" id="amount" min="1" max="5" />
-                </form>
-
                 <button class="deleteItem" type="button">Eliminar</button>
               </div>
               <a class="cartLink" href="./accessories.html"
@@ -167,11 +156,6 @@
                   </select>
                 </form>
 
-                <form action="">
-                  <label for="amount">Cantidad</label>
-                  <input type="number" id="amount" min="1" max="5" />
-                </form>
-
                 <button class="deleteItem" type="button">Eliminar</button>
               </div>
               <a class="cartLink" href="./hoodies.html"
@@ -191,7 +175,9 @@
             <button class="checkout">Checkout</button>
           </div>
           <div class="recomendations">
-            <h5>Explora los productos destacados</h5>
+            <a href="./t-shirts.html"
+              ><h5>Explora los productos destacados</h5></a
+            >
             <div class="featuredItem">
               <img src="../img/2t-shirt.jpg" alt="F" />
               <div class="featuredItemInfo">
@@ -208,9 +194,9 @@
               </div>
             </div>
             <div class="featuredItem">
-              <img src="../img/2t-shirt.jpg" alt="F" />
+              <img src="../img/1t-shirt.jpg" alt="F" />
               <div class="featuredItemInfo">
-                <h4>Nombre</h4>
+                <h4>ANWEN YIREH</h4>
                 <div class="stars cartStars">
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
@@ -218,14 +204,14 @@
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
                 </div>
-                <h4>20€</h4>
+                <h4>15€</h4>
                 <button class="checkout add">Añadir</button>
               </div>
             </div>
             <div class="featuredItem">
-              <img src="../img/2t-shirt.jpg" alt="F" />
+              <img src="../img/3t-shirt.jpg" alt="F" />
               <div class="featuredItemInfo">
-                <h4>Nombre</h4>
+                <h4>KOBRA KAI</h4>
                 <div class="stars cartStars">
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
@@ -233,7 +219,7 @@
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
                 </div>
-                <h4>20€</h4>
+                <h4>15€</h4>
                 <button class="checkout add">Añadir</button>
               </div>
             </div>
@@ -253,9 +239,9 @@
       <div class="footer__flex">
         <div class="footer__info">
           <h2>INFORMACIÓN</h2>
-          <a href="#"> PREGUNTAS FRECUENTES </a>
-                        <a href="#"> AVISOS DE PRIVACIDAD </a>
-                        <a href="#"> TÉRMINOS Y CONDICIONES </a>
+          <a href="./comingSoon.html"> PREGUNTAS FRECUENTES </a>
+                        <a href="./comingSoon.html"> AVISOS DE PRIVACIDAD </a>
+                        <a href="./comingSoon.html"> TÉRMINOS Y CONDICIONES </a>
                         <div class="icons">
                             <a href="https://www.instagram.com/isra_quirozz/" target="_blank"><i class="fa-brands fa-instagram"></i
             ></a>
@@ -266,10 +252,10 @@
 
                     <div class="footer__info">
                         <h2>COMPRAS</h2>
-                        <a href="#"> POLÍTICA DE CAMBIOS Y DEVOLUCIONES </a>
-                        <a href="#"> FORMA DE PAGOS </a>
-                        <a href="#"> CENTRO DE DEVOLUCIONES </a>
-                        <a href="#"> RASTREA TU PEDIDO </a>
+                        <a href="./comingSoon.html"> POLÍTICA DE CAMBIOS Y DEVOLUCIONES </a>
+                        <a href="./comingSoon.html"> FORMA DE PAGOS </a>
+                        <a href="./comingSoon.html"> CENTRO DE DEVOLUCIONES </a>
+                        <a href="./comingSoon.html"> RASTREA TU PEDIDO </a>
                     </div>
                 </div>
 
