--- a/pages/sneakers.html
+++ b/pages/sneakers.html
@@ -52,10 +52,10 @@
                     </a>
                 </form>
                 <div class="icons">
-                    <a href="#">
+                    <a href="./login.html">
                         <i class="fa-regular fa-user"></i>
                     </a>
-                    <a class="heartIcon" href="#">
+                    <a class="heartIcon" href="./comingSoon.html">
                         <i class="fa-regular fa-heart heartIcon"></i>
                     </a>
                     <a href="./shopCart.html">
@@ -78,7 +78,7 @@
                     <a href="#"><span>ZAPATILLAS</span></a>
                 </li>
                 <li><a href="./accessories.html">ACCESORIOS</a></li>
-                <li class="account"><a href="#">CUENTA</a></li>
+                <li class="account"><a href="./login.html">CUENTA</a></li>
             </ul>
         </nav>
     </header>
@@ -103,55 +103,54 @@
         </div>
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img/1sneakers.jpg" alt="SNEAKER 1" />
+            <img src="../img2/2sneakers.webp" alt="SNEAKER 1" />
             <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
-                <h5>DESCRIPCIÓN PRODUCTO</h5>
+                <h4>AIR JORDAN 1 RETRO HIGH OG</h4>
+                <h5>ZAPATILLAS</h5>
                 <h4>€119,99</h4>
             </div>
         </div>
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
-            <img src="../img/1sneakers.jpg" alt="SNEAKER 2" />
+            <img src="../img2/3sneakers.webp" alt="SNEAKER 2" />
             <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
-                <h5 class="soldOutItem">DESCRIPCIÓN PRODUCTO</h5>
+                <h4>AIR JORDAN 1 HI FLYEASE</h4>
+                <h5 class="soldOutItem">ZAPATILLAS - HOMBRE</h5>
                 <h4>€119,99</h4>
             </div>
         </div>
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img/1sneakers.jpg" alt="SNEAKER 3" />
+            <img src="../img2/4sneakers.webp" alt="SNEAKER 3" />
             <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
-                <h5>DESCRIPCIÓN PRODUCTO</h5>
+                <h4>JORDAN DELTA 3 SP</h4>
+                <h5>ZAPATILLAS - HOMBRE</h5>
                 <h4>€119,99</h4>
             </div>
         </div>
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
-            <img src="../img/1sneakers.jpg" alt="SNEAKER 4" />
+            <img src="../img2/5sneakers.webp" alt="SNEAKER 4" />
             <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
-                <h5 class="soldOutItem">DESCRIPCIÓN PRODUCTO</h5>
+                <h4>AIR JORDAN DUB ZERO</h4>
+                <h5 class="soldOutItem">ZAPATILLAS - HOMBRE</h5>
                 <h4>€119,99</h4>
             </div>
         </div>
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img/1sneakers.jpg" alt="SNEAKER 5" />
+            <img src="../img2/6sneakers.webp" alt="SNEAKER 5" />
             <div class="item__description">
-                <h4>NOMBRE DEL PRODUCTO</h4>
-                <h5>DESCRIPCIÓN PRODUCTO</h5>
+                <h4>AIR JORDAN 1 MID</h4>
+                <h5>ZAPATILLAS</h5>
                 <h4>€119,99</h4>
             </div>
         </div>
     </section>
 
     <!-- FOOTER -->
-
     <footer class="footer">
         <h1>LUX</h1>
         <div class="footer__contact">
@@ -163,9 +162,9 @@
         <div class="footer__flex">
             <div class="footer__info">
                 <h2>INFORMACIÓN</h2>
-                <a href=""> PREGUNTAS FRECUENTES </a>
-                <a href="#"> AVISOS DE PRIVACIDAD </a>
-                <a href="#"> TÉRMINOS Y CONDICIONES </a>
+                <a href="./comingSoon.html"> PREGUNTAS FRECUENTES </a>
+                <a href="./comingSoon.html"> AVISOS DE PRIVACIDAD </a>
+                <a href="./comingSoon.html"> TÉRMINOS Y CONDICIONES </a>
                 <div class="icons">
                     <a href="https://www.instagram.com/isra_quirozz/" target="_blank"><i class="fa-brands fa-instagram"></i
             ></a>
@@ -176,10 +175,10 @@
 
             <div class="footer__info">
                 <h2>COMPRAS</h2>
-                <a href="#"> POLÍTICA DE CAMBIOS Y DEVOLUCIONES </a>
-                <a href="#"> FORMA DE PAGOS </a>
-                <a href="#"> CENTRO DE DEVOLUCIONES </a>
-                <a href="#"> RASTREA TU PEDIDO </a>
+                <a href="./comingSoon.html"> POLÍTICA DE CAMBIOS Y DEVOLUCIONES </a>
+                <a href="./comingSoon.html"> FORMA DE PAGOS </a>
+                <a href="./comingSoon.html"> CENTRO DE DEVOLUCIONES </a>
+                <a href="./comingSoon.html"> RASTREA TU PEDIDO </a>
             </div>
         </div>
 
