--- a/pages/t-shirts.html
+++ b/pages/t-shirts.html
@@ -53,10 +53,10 @@
                     </a>
                 </form>
                 <div class="icons">
-                    <a href="#">
+                    <a href="./login.html">
                         <i class="fa-regular fa-user"></i>
                     </a>
-                    <a class="heartIcon" href="#">
+                    <a class="heartIcon" href="./comingSoon.html">
                         <i class="fa-regular fa-heart heartIcon"></i>
                     </a>
                     <a href="./shopCart.html">
@@ -75,7 +75,7 @@
                 <li><a href="./hoodies.html">SUDADERAS</a></li>
                 <li><a href="./sneakers.html">ZAPATILLAS</a></li>
                 <li><a href="./accessories.html">ACCESORIOS</a></li>
-                <li class="account"><a href="#">CUENTA</a></li>
+                <li class="account"><a href="./login.html">CUENTA</a></li>
             </ul>
         </nav>
     </header>
@@ -159,9 +159,9 @@
         <div class="footer__flex">
             <div class="footer__info">
                 <h2>INFORMACIÓN</h2>
-                <a href=""> PREGUNTAS FRECUENTES </a>
-                <a href="#"> AVISOS DE PRIVACIDAD </a>
-                <a href="#"> TÉRMINOS Y CONDICIONES </a>
+                <a href="./comingSoon.html"> PREGUNTAS FRECUENTES </a>
+                <a href="./comingSoon.html"> AVISOS DE PRIVACIDAD </a>
+                <a href="./comingSoon.html"> TÉRMINOS Y CONDICIONES </a>
                 <div class="icons">
                     <a href="https://www.instagram.com/isra_quirozz/" target="_blank"><i class="fa-brands fa-instagram"></i
             ></a>
@@ -172,10 +172,10 @@
 
             <div class="footer__info">
                 <h2>COMPRAS</h2>
-                <a href="#"> POLÍTICA DE CAMBIOS Y DEVOLUCIONES </a>
-                <a href="#"> FORMA DE PAGOS </a>
-                <a href="#"> CENTRO DE DEVOLUCIONES </a>
-                <a href="#"> RASTREA TU PEDIDO </a>
+                <a href="./comingSoon.html"> POLÍTICA DE CAMBIOS Y DEVOLUCIONES </a>
+                <a href="./comingSoon.html"> FORMA DE PAGOS </a>
+                <a href="./comingSoon.html"> CENTRO DE DEVOLUCIONES </a>
+                <a href="./comingSoon.html"> RASTREA TU PEDIDO </a>
             </div>
         </div>
 
