--- a/pages/accessories.html
+++ b/pages/accessories.html
@@ -124,7 +124,7 @@
         </div>
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img2/pulsera4.jpg" alt="PULSERA 4" />
+            <img src="../img/pulsera4.jpg" alt="PULSERA 4" />
             <div class="item__description">
                 <h4>BRAZALETE TOUS</h4>
                 <h5>BRAZALETE - MUJER</h5>
@@ -134,7 +134,7 @@
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
-            <img src="../img2/pulsera5.jpg" alt="PULSERA 5" />
+            <img src="../img/pulsera5.jpg" alt="PULSERA 5" />
             <div class="item__description">
                 <h4>PULSERA TOUS</h4>
                 <h5 class="soldOutItem">PULSERA - MUJER</h5>
@@ -144,7 +144,7 @@
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
 
-            <img src="../img2/pulsera6.jpg" alt="PULSERA 6" />
+            <img src="../img/pulsera6.jpg" alt="PULSERA 6" />
             <div class="item__description">
                 <h4>PULSERA PERLAS / ORO</h4>
                 <h5>PULSERA - MUJER</h5>
