--- a/pages/hoodies.html
+++ b/pages/hoodies.html
@@ -102,7 +102,7 @@
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
-            <img src="../img2/5hoodies.webp" alt="Playera 4" />
+            <img src="../img/5hoodies.jpg" alt="NARUTO" />
             <div class="item__description">
                 <h4>NARUTO</h4>
                 <h5 class="soldOutItem">CH M G EG</h5>
@@ -113,7 +113,7 @@
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
-            <img src="../img2/3hoodies.webp" alt="Playera 2" />
+            <img src="../img/3hoodies.jpg" alt="BATMAN" />
             <div class="item__description">
                 <h4>BATMAN</h4>
                 <h5 class="soldOutItem">CH M G EG</h5>
@@ -122,7 +122,7 @@
         </div>
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img2/4hoodies.webp" alt="Playera 3" />
+            <img src="../img/4hoodies.jpg" alt="EREN" />
             <div class="item__description">
                 <h4>EREN JAEGER</h4>
                 <h5>CH M G EG</h5>
@@ -131,7 +131,7 @@
         </div>
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img2/2hoodies.webp" alt="Playera 1" />
+            <img src="../img/2hoodies.jpg" alt="HARRY POTTER" />
             <div class="item__description">
                 <h4>HARRY POTTER</h4>
                 <h5>CH M G EG</h5>
@@ -141,7 +141,7 @@
 
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img2/6hoodies.webp" alt="Playera 5" />
+            <img src="../img/6hoodies.jpg" alt="JURASSIC PARK" />
             <div class="item__description">
                 <h4>JURASSIC PARK</h4>
                 <h5>CH M G EG</h5>
