--- a/pages/sneakers.html
+++ b/pages/sneakers.html
@@ -103,7 +103,7 @@
         </div>
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img2/2sneakers.webp" alt="SNEAKER 1" />
+            <img src="../img/2sneakers.jpg" alt="SNEAKER 1" />
             <div class="item__description">
                 <h4>AIR JORDAN 1 RETRO HIGH OG</h4>
                 <h5>ZAPATILLAS</h5>
@@ -113,7 +113,7 @@
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
-            <img src="../img2/3sneakers.webp" alt="SNEAKER 2" />
+            <img src="../img/3sneakers.jpg" alt="SNEAKER 2" />
             <div class="item__description">
                 <h4>AIR JORDAN 1 HI FLYEASE</h4>
                 <h5 class="soldOutItem">ZAPATILLAS - HOMBRE</h5>
@@ -122,7 +122,7 @@
         </div>
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img2/4sneakers.webp" alt="SNEAKER 3" />
+            <img src="../img/4sneakers.jpg" alt="SNEAKER 3" />
             <div class="item__description">
                 <h4>JORDAN DELTA 3 SP</h4>
                 <h5>ZAPATILLAS - HOMBRE</h5>
@@ -132,7 +132,7 @@
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
-            <img src="../img2/5sneakers.webp" alt="SNEAKER 4" />
+            <img src="../img/5sneakers.jpg" alt="SNEAKER 4" />
             <div class="item__description">
                 <h4>AIR JORDAN DUB ZERO</h4>
                 <h5 class="soldOutItem">ZAPATILLAS - HOMBRE</h5>
@@ -141,7 +141,7 @@
         </div>
         <div class="collection__item difItem">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img2/6sneakers.webp" alt="SNEAKER 5" />
+            <img src="../img/6sneakers.jpg" alt="SNEAKER 5" />
             <div class="item__description">
                 <h4>AIR JORDAN 1 MID</h4>
                 <h5>ZAPATILLAS</h5>
