--- a/pages/t-shirts.html
+++ b/pages/t-shirts.html
@@ -119,7 +119,7 @@
         </div>
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img2/4t-shirt.webp" alt="Playera 4" />
+            <img src="../img/4t-shirt.jpg" alt="Playera 4" />
             <div class="item__description">
                 <h4>LADY THOR</h4>
                 <h5>CH M G EG</h5>
@@ -129,7 +129,7 @@
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
             <h2 class="soldOut">AGOTADO</h2>
-            <img src="../img2/5t-shirt.webp" alt="Playera 5" />
+            <img src="../img/5t-shirt.jpg" alt="Playera 5" />
             <div class="item__description">
                 <h4>DARKSIDE</h4>
                 <h5 class="soldOutItem">CH M G EG</h5>
@@ -138,7 +138,7 @@
         </div>
         <div class="collection__item">
             <i class="heartIcon fa-regular fa-heart"></i>
-            <img src="../img2/6t-shirt.jpg" alt="Playera 6" />
+            <img src="../img/6t-shirt.jpg" alt="Playera 6" />
             <div class="item__description">
                 <h4>JAZMINE</h4>
                 <h5>CH M G EG</h5>
